--- a/services/.htaccess
+++ b/services/.htaccess
@@ -10,4 +10,31 @@
 
 	RewriteCond %{REQUEST_FILENAME} -s
 	RewriteRule ^(.*)$ api.php [QSA,NC,L]	
+
+
+	# Redirect /xampp folder to https
+    RewriteCond %{HTTPS} !=on
+    RewriteCond %{REQUEST_URI} xampp
+    RewriteRule ^(.*) https://%{SERVER_NAME}$1 [R,L]
+
+    # Redirect /phpMyAdmin folder to https
+    RewriteCond %{HTTPS} !=on
+    RewriteCond %{REQUEST_URI} phpmyadmin
+    RewriteRule ^(.*) https://%{SERVER_NAME}$1 [R,L]
+
+    # Redirect /security folder to https
+    RewriteCond %{HTTPS} !=on
+    RewriteCond %{REQUEST_URI} security
+    RewriteRule ^(.*) https://%{SERVER_NAME}$1 [R,L]
+
+    # Redirect /webalizer folder to https
+    RewriteCond %{HTTPS} !=on
+    RewriteCond %{REQUEST_URI} webalizer
+    RewriteRule ^(.*) https://%{SERVER_NAME}$1 [R,L]
+
+    # Redirect /folder_name folder to https
+    RewriteCond %{HTTPS} !=on
+    RewriteCond %{REQUEST_URI} folder_name
+    RewriteRule ^(.*) https://%{SERVER_NAME}$1 [R,L]
+    
 </IfModule>
